DontExpiReBack/src/main/java/org/example/error/NewPasswordRequiredException.java
package org.example.error;

public class NewPasswordRequiredException extends RuntimeException {
    public NewPasswordRequiredException(String message) {
        super(message);
    }
}
